--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,7 +32,7 @@
             
                 <div class="col-md-3 col-sm-6">
                  <div class="box_calculator">
-                        <a href="daily-calorie-calculator.html">
+                        <a href="#">
                         <img src="img/icon-1.png" alt="">
                         <h3>Find a friend in minutes</h3>
                         <p>Stop watching the paint peel, get out there and have some fun!</p>
@@ -42,7 +42,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="calories-burned-heart-rate.html">
+                        <a href="#">
                         <img src="img/icon-2.png" alt="">
                         <h3>Hugs = Happy Hearts<br /><br /></h3>
                         <p>You don't have to die young and alone!  Get started today.</p>
@@ -52,7 +52,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="calories-burned-calculator.html">
+                        <a href="#">
                         <img src="img/icon-3.png" alt="">
                         <h3>Fun Sitting or Standing</h3>
                         <p>It doesn't matter if you like bowling or playing XBox.</p>
@@ -62,7 +62,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="bmi-calculator.html">
+                        <a href="#">
                         <img src="img/icon-4.png" alt="">
                         <h3>All Body Types<br /></h3>
                         <p>Everybody needs a friend, out there is someone even lonelier than you.</p>
@@ -76,24 +76,24 @@
             <%= yield %>
             <div class="row">
                 <div class="col-md-6">
-                    <h3 class="title-2"><span>Hello</span> / My experience</h3>
-                    <p>Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret reprehendunt usu, sit at purto iudicabit.
+                    <h3 class="title-2"><span>Friend</span> / Found</h3>
+                    <p>The friend operating system has been built from the ground up to help lonely people fill the void in their lives with a new friend.  <strong>Unlike dating sites or those scary "meet-up" sites</strong>, Friend-OS is dedicated to one thing and one thing only, helping you find a <strong>new best friend</strong>.
                     </p>
                     <p>
-                        Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret reprehendunt usu, sit at purto iudicabit.
+                        Friend-OS has successfully matched up lonely people from all across the country with new best friends.
                     </p>
-                    <p><a href="#" class="button_small">Read more</a></p>
+                    <p><a href="/welcome/pricing" class="button_small">Sign Up Now!</a></p>
                 </div>
                 
                 <div class="col-md-6">
-                    <h3 class="title-2"><span>Mission</span> / Love training</h3>
+                    <h3 class="title-2"><span>Social</span> / Operating System</h3>
                     <p>
-                        Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret reprehendunt usu, sit at purto iudicabit.
+                        Are you sick of seeing your co-workers and relatives spend hours and hours a day reading their friends posts on Facebook?  Ever wonder what it would be like to have a birthday greeting on your "wall" from your very own Facebook friends?
                     </p>
                     <p>
-                        Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret reprehendunt usu, sit at purto iudicabit.
+                        With Friend-OS's <strong><i>"I'm Social Too"</i></strong> feature you don't have to spend any more time wondering, you could be one of those people with hundreds of virtual friends too!<br><br>
                     </p>
-                    <p><a href="#" class="button_small">Read more</a></p>
+                    <p><a href="/welcome/social" class="button_small">Get Started Today!</a></p>
                 </div>
             </div><!-- End row -->
             
@@ -111,7 +111,20 @@
                         <em>Shawn M.</em>
                     </div>
                 </div>
-                
+
+                <div class="col-md-6">
+                    <div class="quote clearfix">
+                        <img src="img/testimonial-4.jpg" class="img-circle" alt="">
+                        <p>
+                             My new besty gives me high fives every five minutes.  We call them five by fives.
+                        </p>
+                        <em>Ray R.</em>
+                    </div>
+                </div>
+
+            <div class="row">
+            </div><!-- End row -->
+
                 <div class="col-md-6">
                     <div class="quote clearfix">
                         <img src="img/testimonial-2.jpg" class="img-circle" alt="">
@@ -132,15 +145,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-6 clearfix">
-                    <div class="quote">
-                        <img src="img/testimonial-4.jpg" class="img-circle" alt="">
-                        <p>
-                             My new besty gives me high fives every five minutes.  We call them five by fives.
-                        </p>
-                        <em>Ray R.</em>
-                    </div>
-                </div>
+
                 
             </div><!-- End row -->
 
