--- a/app/views/welcome/pricing.html.erb
+++ b/app/views/welcome/pricing.html.erb
@@ -1,1 +1,100 @@
-PRICING
+     <div class="container">
+        
+            <div id="sub-head">
+                <div class="flyIn">
+                    <h2>Pricing plans</h2>
+                    <p>You Can't Put A Price on Friendship... Or Can You?</p>
+                </div>
+            </div>
+            
+           
+            
+            <h3 class="title">A Plan for Every Budget</h3>
+            <div class="row">
+                <div class="col-md-3">
+                
+                    <div class="pricing-table blue rounded">
+                        <div class="pricing-table-header">
+                            <span class="heading">"I'm Social Too"</span>
+                            <span class="price-value"><span>$10</span></span>
+                        </div>
+                        <div class="pricing-table-space "></div>
+                        <div class="pricing-table-features">
+                            <p><strong>75 Virtual Friends</strong></p>
+                            <p><strong>15 Birthday Wall Posts Every Year!</strong></p>
+                            <p><strong>15-20 Friend Posts in Your Daily Newsfeed</strong></p>
+                            <p><strong>2-3 Likes of Your Posts, Per Post!</strong></p>
+                        </div>
+                        
+                        <div class="pricing-table-sign-up">
+                            <a href="/welcome/signup" class="btn btn-large btn-block btn-primary">BUY NOW!</a>
+                        </div>
+    
+                    </div><!-- End pricing-table-->
+                </div><!-- End col-md-3 -->
+                
+                <div class="col-md-3">
+                    <div class="pricing-table blue">
+                        <div class="pricing-table-header">
+                            <span class="heading">"I'm Really Social"</span>
+                            <span class="price-value"><span>$25</span></span>
+                        </div>
+                        <div class="pricing-table-space "></div>
+                        <div class="pricing-table-features">
+                            <p><strong>150 Virtual Friends</strong></p>
+                            <p><strong>35 Birthday Wall Posts Every Year!</strong></p>
+                            <p><strong>25-50 Friend Posts in Your Daily Newsfeed</strong></p>
+                            <p><strong>10+ Likes of Your Posts, Per Post!</strong></p>
+                        </div>
+                        
+                        <div class="pricing-table-sign-up">
+                            <a href="/welcome/signup" class="btn btn-block btn-primary">BUY NOW!</a>
+                        </div>
+                        
+                    </div><!-- End pricing-table-->
+                </div><!-- End col-md-3 -->
+                
+                <div class="col-md-3">
+                    <div class="pricing-table blue ">
+                        <div class="pricing-table-header">
+                            <span class="heading">Warm Aquaintance</span>
+                            <span class="price-value"><span>$50</span></span>
+                        </div>
+                        <div class="pricing-table-space"></div>
+                        <div class="pricing-table-features">
+                            <p><strong>"I'm Really Social" Plan</strong></p>
+                            <p><strong> + </strong></p>
+                            <p><strong>10 In Person Introduction Meetings</strong></p>
+                            <p><strong>1 Warm Aquaintance</strong></p>
+                        </div>
+                        
+                        <div class="pricing-table-sign-up">
+                            <a href="/welcome/signup" class="btn btn-block btn-primary">BUY NOW!</a>
+                        </div>
+                        
+                    </div><!-- End pricing-table-->
+                </div><!-- End col-md-3 -->
+                
+                <div class="col-md-3">
+                    <div class="pricing-table green ">
+                        <div class="pricing-table-header">
+                            <span class="heading">Best Friend</span>
+                            <span class="price-value"><span>$100</span></span>
+                        </div>
+                        <div class="pricing-table-space "></div>
+                        <div class="pricing-table-features">
+                            <p><strong>"I'm Really Social" Plan</strong></p>
+                            <p><strong> + </strong></p>
+                            <p><strong>15 In Person Introduction Meetings</strong></p>
+                            <p><strong>1 "We're Exclusive" Best Friend</strong></p>
+                        </div>
+                        
+                        <div class="pricing-table-sign-up">
+                            <a href="/welcome/signup" class="btn btn-block btn-success">BUY NOW!</a>
+                        </div>
+                        
+                    </div><!-- End pricing-table-->
+                </div><!-- End col-md-3 -->
+                
+            </div><!-- End row -->
+        </div><!-- End container -->
