More pages, first take on mail

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
                         <div class="form-bg-2"><input type="text" class="form-control" name="duration" placeholder="Favorite Activities"></div>
                         <input type="hidden" name="calculator" value="adv_calculator"/>
                     </form>
-                    <button id="selectBtn" class="button_medium add_top_30">Calculate</button>
+                    <button id="selectBtn" class="button_medium add_top_30">Search</button>
                 </div>
                 
                 <div class="col-md-5">
