--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -188,3 +188,17 @@
         </div>
         <div id="copy">© 2013 - All Rights Reserved</div>
         </footer><!-- End footer -->
+
+
+<!-- FLEXSLIDER -->  
+<script defer src="js/jquery.flexslider.js"></script> 
+ <script type="text/javascript">
+/* <![CDATA[ */
+  $(window).load(function() {
+  $('.flexslider').flexslider({
+    animation: "fade",
+    slideshowSpeed: 3000
+  });
+});
+  /* ]]> */
+</script> 
