Work on Profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>NewBesty</title>
-<!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
 <html lang="en">
 <!--<![endif]-->
 <head>
 
 <!-- Basic Page Needs -->
 <meta charset="utf-8">
-<title>PLANAR | Personal trainer site template</title>
+<title>Friend OS: The Worlds First Hug Powered Operating System</title>
 <meta name="description" content="Only 16$ - PLANAR Personal trainer site template with calories calculators">
 <meta name="author" content="Ansonika">
 
