--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,49 +1,193 @@
 <div class="container">
         
- <h3 class="title"><%= "#{@user.fname} #{@user.lname}" %></h3>
+ <h3 class="title"><%= "#{@user.fname} (#{@user.nname}) #{@user.lname}" %></h3>
+
+
+
              <div class="row">
-                    <div class="col-md-6">
-                   <h3>Some words about me</h3>
-                    <p><strong>Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. </strong>Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret 
-reprehendunt usu, sit at purto iudicabit.</p>
-                    <p>Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret 
-reprehendunt usu, sit at purto iudicabit. Qui at commune signiferumque. In mel labores moderatius, tantas saperet facilisi quo ut. Vero wisi civibus ea vim. An tota nostro sit, mel ei utinam ancillae, mutat dolores mea et. Homero iriure imperdiet eu mel. Ei enim viderer pri. Sed in eros nobis, te cum invidunt probatus. Mel an aeque efficiendi. Te populo ocurreret 
-reprehendunt usu, sit at purto iudicabit.</p>
+                    <div class="col-md-8">
+                   <h3>About <%= @user.fname %></h3>
+                   
+                    <p><%= simple_format(@user.description) %></p>
+
                     </div>
+
+                    <div class="col-md-4">
+                            <img src="<%= @user.profile_image %>" alt="" class="img-circle style img-responsive">
+                            <br />
+                            <h4 align="center"><%= @user.city %>, <%= @user.country %></h4>
+                            <br />
+                            <h5 align="center"><i><%= @user.motto %></i></h5>
+                    </div>
+
+            </div>
+
+            <h3 class="title">Facts About <%= @user.fname %></h3>
+
+            <div class="row">
+                
+             
+                <div class="col-md-8">
+                            
+                        <h3>Quick Stats</h3>
+                        <div class="row bg-1">
+
+                            <div class="col-md-5"><h5>WOW Name</h5></div>
+                            <div class="col-md-4"><h6><%= @user.wow_name %></h6></div>
+                         </div>
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>XBox Name</h5></div>
+                            <div class="col-md-4"><h6><%= @user.xbox_name %></h6></div>
+                         </div>
+
+                         <div class="row bg-1">
+                            <div class="col-md-5"><h5>Furry Name</h5></div>
+                            <div class="col-md-4"><h6><%= @user.furry_name %></h6></div>
+                         </div>
+
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>Favorite Activity</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_activity %></h6></div>
+                         </div>
+
+                         <div class="row bg-1">
+                            <div class="col-md-5"><h5>Favorite Game</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_game %></h6></div>
+                         </div>
+
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>Favorite Movie</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_movie %></h6></div>
+                         </div>
+
+
+                        <div class="row bg-1">
+                            <div class="col-md-5"><h5>Favorite Band</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_band %></h6></div>
+                         </div>
+
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>Favorite Show</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_show %></h6></div>
+                         </div>
+
+
+                        <div class="row bg-1">
+                            <div class="col-md-5"><h5>Favorite Karaoke Song</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_karaoke_song %></h6></div>
+                         </div>
+
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>Favorite Book</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_book %></h6></div>
+                         </div>
+
+                         <div class="row bg-1">
+                            <div class="col-md-5"><h5>Favorite Card Game</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_card_game %></h6></div>
+                         </div>
+
+                         <div class="row bg-2">
+                            <div class="col-md-5"><h5>Favorite Character</h5></div>
+                            <div class="col-md-4"><h6><%= @user.favorite_character %></h6></div>
+                         </div>
+
+                    </div>
+
+
+
+<!--
+
+    t.string   "reason_since"
+    t.string   "description"
+    t.string   "interests"
+    t.string   "looking_for"
+
+                     :hobbies => "Robert",
+                     :age_range => "Robert",
+                     :drinks_alcohol => "Robert",
+                     :enjoys_dancing => "Robert",
+                     :enjoys_singing => "Robert",
+                     :loneliness_score => "Robert",
+                     :phone_days_a_week => "Robert",
+                     :friend_days_a_weeek => "Robert",
+                     :profile_image => "/img/gibbs.png")
+
+-->
+
+
+   <div class="col-md-4">
+                    <h3>Badges of Honor</h3>
+                    <img src="http://img-cache.cdn.gaiaonline.com/6dd4941765c20917f8e4a4968017500e/http://i723.photobucket.com/albums/ww234/wowaccountvow/wow_icon.png" class="img-thumbnail">
+
+                    <img src="http://png-3.findicons.com/files/icons/832/social_and_web/64/xbox_360.png" class="img-thumbnail">
+                    <img src="https://static-s.foursquare.com/img/categories/nightlife/karaoke_64-7afd4d4ca138ed8fc8783fe9ce9048f1.png" class="img-thumbnail">
+
+                    <img src="http://www.goaroostookoutdoors.com/sites/default/files/activities/icons/icon_hiking_blk.png" class="img-thumbnail">
+                    <img src="http://individual.icons-land.com/IconsPreview/POI/PNG/Plain/64x64/Dancing_Plain_Green.png" class="img-thumbnail">
+
+                    <img src="http://icons.iconarchive.com/icons/icons-land/metro-raster-sport/64/Soccer-Ball-icon.png" class="img-thumbnail">
+
+                    <img src="https://cdn4.iconfinder.com/data/icons/free-game-icons/64/Wizard.png" class="img-thumbnail">
+
+                    <img src="http://tonefloreal.com/wp-content/uploads/kiss-me-im-irish-64x64.jpg" class="img-thumbnail">
+
+                    <img src="http://upload.wikimedia.org/wikipedia/commons/a/aa/Crystal_package_games_card.png" class="img-thumbnail">
+
+
+
+                   
+
                     
-                <p class="col-md-6 text-center"><img src="<%= @user.profile_image %>" alt="" class="img-circle style img-responsive"></p>
+
+                    
+
+                   
+
+
+
+                </div>
+
                 
                 </div><!-- End row -->
             
-            <h3 class="title">Facts About <%= @user.fname %></h3>
+            <h3 class="title">Personality Scores</h3>
             
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Dicunt omnesque</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet, quando dicunt omnesque per id, his ex probatus perpetua. <strong>Vix id suas dicit, id sit ferri primis nusquam</strong>. Iudico iuvaret epicuri ei eam, amet aperiri mel id, no 	wisi dolorem quo. Lorem ipsum dolor sit amet, quando dicunt omnesque per id, his ex probatus perpetua. Vix id suas dicit, id sit ferri primis nusquam. Iudico iuvaret epicuri ei eam, amet aperiri mel id, no wisi dolorem quo.</p>
-                    <h5>Details</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, quando dicunt omnesque per id, his ex probatus perpetua. Vix id suas dicit, id sit ferri primis nusquam. Iudico iuvaret epicuri ei eam, amet aperiri mel id, no wisi dolorem quo. Lorem ipsum dolor sit amet, quando dicunt omnesque per id, his ex probatus perpetua. Vix id suas dicit, id sit ferri primis nusquam. Iudico iuvaret epicuri ei eam, amet aperiri mel id, no wisi dolorem quo.
-                    </p>
-                    
-                </div>
-                
-                <div class="col-md-6">
-                    <h4>Personality Scores</h4>
-                    
                     <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" data-percentage="90"></div>
                     </div>
-                   <p>Willingness to Listen</p>
+                   <p>Listening Skills</p>
                     
                     <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" data-percentage="70"></div>
                     </div>
-                    <p>Fun Focus</p>
+                    <p>Shy Factor</p>
                     
                     <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar"  data-percentage="40"></div>
+                    </div>
+                      <p>Openmindedness</p>
+                    
+                </div>
+                
+                <div class="col-md-6">
+                    
+                    
+                    
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-info" role="progressbar" data-percentage="67"></div>
+                    </div>
+                    <p>Fun Focus</p>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" data-percentage="95"></div>
+                    </div>
+                   <p>Gamer</p>
+                    
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar"  data-percentage="55"></div>
                     </div>
                       <p>Gossip Hound</p>
                     
