--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -777,6 +777,13 @@ pre code {
   margin-left: -15px;
 }
 
+.bg-1 {
+  background-color:#e9e9e9;
+}
+.bg-2 {
+  background-color:#f2f2f2;
+}
+
 .row:before,
 .row:after {
   display: table;
