--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
             	<ul id="main-nav" class="sf-menu" >
                 <li><a href="/">About Friend-OS</a>
                 	<ul>
-                        <li><a href="/">Overview</a></li>
+                        <li><a href="/welcome/overview">Overview</a></li>
                         <li><a href="/welcome/social">"I'm Social Too"</a></li>
                         <li><a href="/welcome/pricing">Pricing</a></li>
                   	</ul>
