--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,23 +93,23 @@
 
 
 <!-- MENU JS -->    
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.js"></script>
-<script src="js/mobile-menu.js"></script>
+<script src="/js/hoverIntent.js"></script>
+<script src="/js/superfish.js"></script>
+<script src="/js/mobile-menu.js"></script>
 
 <!-- OTHER JS --> 
-<script src="js/placeholder.js"></script>
-<script src="js/inview.js"></script> 
-<script src="js/bootstrap.js"></script>
-<script src="assets/validate.js"></script> 
-<script src="js/functions.js"></script>
+<script src="/js/placeholder.js"></script>
+<script src="/js/inview.js"></script> 
+<script src="/js/bootstrap.js"></script>
+<script src="/js/validate.js"></script> 
+<script src="/js/functions.js"></script>
 
 
 
 <!-- FANCYBOX -->
-<script  src="js/fancybox/source/jquery.fancybox.pack.js?v=2.1.4" type="text/javascript"></script> 
-<script src="js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5" type="text/javascript"></script> 
-<script src="js/fancy_func.js" type="text/javascript"></script> 
+<script  src="/js/fancybox/source/jquery.fancybox.pack.js?v=2.1.4" type="text/javascript"></script> 
+<script src="/js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5" type="text/javascript"></script> 
+<script src="/js/fancy_func.js" type="text/javascript"></script> 
 
 
 </body>
