--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,17 +6,11 @@
                 <div class="col-md-6">
                     <form>
                         <div class="form-bg-1"><input type="text" class="form-control" name="Age" placeholder="Age (Years)"></div>
+                        <div class="form-bg-2"><input type="text" class="form-control" name="Interests" placeholder="Interests"></div>
                         
-                        <div class="form-bg-1">
-                            <div class="styled-select">
-                                <select class="form-control col-md-3" name="weight_select">
-                                    <option value="pounds">By Pounds</option>
-                                    <option value="kilo">By Kilo (KG)</option>
-                                </select>
-                            </div>
-                        </div>
+
                         
-                        <div class="form-bg-2" style="padding:18px 20px 18px 20px;">
+                        <div class="form-bg-1" style="padding:18px 20px 18px 20px;">
                             <input type="radio" value="Male" name="Male" id="Male"><label for="Male" style="margin-right:30px;"><span></span>Male</label>
                             <input type="radio" value="Female" name="Female" id="Female"><label for="Female"><span></span>Female</label>
                         </div>
