--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,55 @@
 <div class="container">
             
-            <h2 class="title">Look for friends today</h3>
             
             <div class="row">
-                <div class="col-md-6">
-                    <form>
-                        <div class="form-bg-1"><input type="text" class="form-control" name="Age" placeholder="Age (Years)"></div>
-                        <div class="form-bg-2"><input type="text" class="form-control" name="Interests" placeholder="Interests"></div>
-                        
 
-                        
-                        <div class="form-bg-1" style="padding:18px 20px 18px 20px;">
-                            <input type="radio" value="Male" name="Male" id="Male"><label for="Male" style="margin-right:30px;"><span></span>Male</label>
-                            <input type="radio" value="Female" name="Female" id="Female"><label for="Female"><span></span>Female</label>
-                        </div>
-                        
-                        <div class="form-bg-2"><input type="text" class="form-control" name="duration" placeholder="Favorite Activities"></div>
-                        <input type="hidden" name="calculator" value="adv_calculator"/>
-                    </form>
-                    <button id="selectBtn" class="button_medium add_top_30">Search</button>
+                <div class="col-md-8">
+                    <h2 class="title">Look for friends today</h2>
                 </div>
                 
-                <div class="col-md-5">
-                	<div class="result">
-                        <h2>Friends Found</h2>
-                        <div id="adv_calculator_value">0</div>
-                    </div>   
+                <div class="col-md-4">
+                    <h4 align="center">Find a great new friend today!</h4>
+                </div>
+            </div>
+
+            
+
+            <div class="row">
+
+                <div class="col-md-8">
+                    <img src="http://gravatar.com/avatar/44219793664b1ae0eac06ff4a9c71c5b?d=monsterid&s=128&r=G" class="img-thumbnail">
+                    <img src="https://pbs.twimg.com/profile_images/1581328107/hf-twit-profile.jpg" class="img-thumbnail">
+                    <img src="https://s3.amazonaws.com/gumroad/profiles/44d695b1c991faa64ca7e9d3871a05ab/original/profile_ima20121112-23398-1teddv3.png" class="img-thumbnail">
+                    <img src="http://pbs.twimg.com/profile_images/2182502571/Andrea_Mitchell_Twitter_profile_headshot_reasonably_small.jpg" class="img-thumbnail">
+                    <img src="http://www.gravatar.com/avatar/f44b47d4d5e48ed503d3f7f53194b1ed?s=128&d=identicon&r=PG" class="img-thumbnail">
+                    <img src="http://barza.wpengine.netdna-cdn.com/wp-content/uploads/avatars/100178/b5f9288c6f433bcce89d6e0377c049d6-bpthumb.jpg" class="img-thumbnail">
+
+                    <img src="http://www.hingx.org/UserManagement/ProfilePicture?permanent=True&userId=ef3ff53c-560a-4610-b652-68337f89bd47" class="img-thumbnail">
+                    <img src="https://ali-uploads-prod.s3.amazonaws.com/avatars/7ecafb2a167cca27346595d828486c5b-profile.JPG" class="img-thumbnail">
+                    <img src="http://gravatar.com/avatar/822feac1924ac47262bfd8de5f2d42e7?d=http://communitygarden.org.au/wp-content/plugins/buddypress/bp-core/images/mystery-man.jpg&s=128&r=G" class="img-thumbnail">
+                    <img src="http://livestronglivelean.com/wp-content/uploads/avatars/89273/2b876da54719bbe2763724d93afad6ef-bpthumb.jpg" class="img-thumbnail">
                 </div>
                 
+                <div class="col-md-4">
+                    <img src="http://tofargo.areavoices.com/files/2011/09/louis.jpg" class="img-thumbnail">
+                </div>
+            </div>
+
+            
+            <div class="row">
+                <div class="col-md-12">
+                    <br><br><br>
+                    <h2 class="title" align="center">Look for friends today</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4">
+                    <a href="/welcome/signup" class="btn btn-large btn-block btn-primary">SIGN UP TODAY TO START SEARCHING!</a>
+                </div>
+                <div class="col-md-4">
+                </div>
             </div>
 </div>
