--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,7 +32,7 @@
             
                 <div class="col-md-3 col-sm-6">
                  <div class="box_calculator">
-                        <a href="#">
+                        <a href="/welcome/pricing">
                         <img src="img/icon-1.png" alt="">
                         <h3>Find a friend in minutes</h3>
                         <p>Stop watching the paint peel, get out there and have some fun!</p>
@@ -42,7 +42,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="#">
+                        <a href="/welcome/pricing">
                         <img src="img/icon-2.png" alt="">
                         <h3>Hugs = Happy Hearts<br /><br /></h3>
                         <p>You don't have to die young and alone!  Get started today.</p>
@@ -52,7 +52,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="#">
+                        <a href="/welcome/pricing">
                         <img src="img/icon-3.png" alt="">
                         <h3>Fun Sitting or Standing</h3>
                         <p>It doesn't matter if you like bowling or playing XBox.</p>
@@ -62,7 +62,7 @@
                 
                 <div class="col-md-3 col-sm-6">
                     <div class="box_calculator">
-                        <a href="#">
+                        <a href="/welcome/pricing">
                         <img src="img/icon-4.png" alt="">
                         <h3>All Body Types<br /></h3>
                         <p>Everybody needs a friend, out there is someone even lonelier than you.</p>
