--- a/app/views/welcome/pricing.html.erb
+++ b/app/views/welcome/pricing.html.erb
@@ -48,7 +48,7 @@
                         </div>
                         
                         <div class="pricing-table-sign-up">
-                            <a href="/welcome/signup" class="btn btn-block btn-primary">BUY NOW!</a>
+                            <a href="/welcome/signup" class="btn btn-block btn-primary">SIGN UP NOW!</a>
                         </div>
                         
                     </div><!-- End pricing-table-->
@@ -69,7 +69,7 @@
                         </div>
                         
                         <div class="pricing-table-sign-up">
-                            <a href="/welcome/signup" class="btn btn-block btn-primary">BUY NOW!</a>
+                            <a href="/welcome/signup" class="btn btn-block btn-primary">SIGN UP NOW!</a>
                         </div>
                         
                     </div><!-- End pricing-table-->
@@ -90,7 +90,7 @@
                         </div>
                         
                         <div class="pricing-table-sign-up">
-                            <a href="/welcome/signup" class="btn btn-block btn-success">BUY NOW!</a>
+                            <a href="/welcome/signup" class="btn btn-block btn-success">SIGN UP NOW!</a>
                         </div>
                         
                     </div><!-- End pricing-table-->
