--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,14 +34,7 @@
                     <img src="http://tofargo.areavoices.com/files/2011/09/louis.jpg" class="img-thumbnail">
                 </div>
             </div>
-
-            
-            <div class="row">
-                <div class="col-md-12">
-                    <br><br><br>
-                    <h2 class="title" align="center">Look for friends today</h2>
-                </div>
-            </div>
+ <br><br>
 
             <div class="row">
                 <div class="col-md-4">
@@ -52,4 +45,14 @@
                 <div class="col-md-4">
                 </div>
             </div>
+<br><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
+                    <div align="center">
+                        <iframe width="640" height="360" src="//www.youtube.com/embed/8vY-4zWKsJM?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
 </div>
