--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -45,12 +45,14 @@
                 <div class="col-md-4">
                 </div>
             </div>
-<br><br>
-            <div class="row">
+
+  <div class="row">
                 <div class="col-md-12">
                     <br>
                     <div align="center">
-                        <iframe width="640" height="360" src="//www.youtube.com/embed/8vY-4zWKsJM?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+                        <div class="fluid-width-video-wrapper">
+                          <iframe width="640" height="360" src="//www.youtube.com/embed/8vY-4zWKsJM?feature=player_detailpage" frameborder="0" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
