fixing userid link in leave reference

--- a/app/views/users/leave_reference.html.erb
+++ b/app/views/users/leave_reference.html.erb
@@ -40,7 +40,7 @@ Friend-OS has successfully matched up lonely people from all across the country 
                         
                     </div>
                     <div class="col-md-4">
-                    	<a href="/users/1">
+                    	<a href="/users/<%= @user.id %>">
                         <img src="<%= @user.profile_image %>" alt="" class="img-circle style img-responsive">
                         <br />
                         <h4 align="center">
