Changed a few minor links

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,7 +40,7 @@
                 <div class="col-md-4">
                 </div>
                 <div class="col-md-4">
-                    <a href="/welcome/signup" class="btn btn-large btn-block btn-primary">SIGN UP TODAY TO START SEARCHING!</a>
+                    <a href="/welcome/pricing" class="btn btn-large btn-block btn-primary">SIGN UP TODAY TO START SEARCHING!</a>
                 </div>
                 <div class="col-md-4">
                 </div>
